force-app/main/default/objects/Consultation__c/Consultation__c.object-meta.xml
<CustomObject>
    <description>Enterprise Toronto&#39;s client sign-in and follow-up module.</description>
    <label>Consultation</label>
    <nameField>
        <displayFormat>C-{YYYY}-{00000000}</displayFormat>
        <label>Consultation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consultations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>