force-app/main/default/objects/Consultation__c/fields/Business_Idea__c.field-meta.xml
<CustomField>
    <fullName>Business_Idea__c</fullName>
    <label>Business Idea</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>