force-app/main/default/objects/Consultation__c/fields/Business_Sector__c.field-meta.xml
<CustomField>
    <fullName>Business_Sector__c</fullName>
    <label>Business Sector</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>11 - Agriculture, forestry, fishing and hunting</fullName>
            </value>
            <value>
                <fullName>21 - Mining, quarrying, and oil and gas extraction</fullName>
            </value>
            <value>
                <fullName>22 - Utilities</fullName>
            </value>
            <value>
                <fullName>23 - Construction</fullName>
            </value>
            <value>
                <fullName>31-33 - Manufacturing</fullName>
            </value>
            <value>
                <fullName>41 - Wholesale Trade</fullName>
            </value>
            <value>
                <fullName>44-45 - Retail Trade</fullName>
            </value>
            <value>
                <fullName>48-49 - Transportation and Wharehousing</fullName>
            </value>
            <value>
                <fullName>51 - Information and Cultural Industries</fullName>
            </value>
            <value>
                <fullName>52 - Finance and Insurance</fullName>
            </value>
            <value>
                <fullName>53 - Real Estate and Rental and Leasing</fullName>
            </value>
            <value>
                <fullName>54 - Professional, Scientific and Technical Services</fullName>
            </value>
            <value>
                <fullName>55 - Management of companies and enterprises</fullName>
            </value>
            <value>
                <fullName>56 - Administrative and Support, Waste Management and Remediation Services</fullName>
            </value>
            <value>
                <fullName>61 - Educational Services</fullName>
            </value>
            <value>
                <fullName>62 - Health Care and Social Assistance</fullName>
            </value>
            <value>
                <fullName>71 - Arts, Entertainment and Recreation</fullName>
            </value>
            <value>
                <fullName>72 - Accomodation and Food Services</fullName>
            </value>
            <value>
                <fullName>81 - Other Services (Except Public Administration)</fullName>
            </value>
            <value>
                <fullName>91 - Public Administration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>