force-app/main/default/objects/Consultation__c/fields/Business_Status__c.field-meta.xml
<CustomField>
    <fullName>Business_Status__c</fullName>
    <label>Business Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Existing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>