force-app/main/default/objects/Consultation__c/fields/Business_Sub_Sector__c.field-meta.xml
<CustomField>
    <fullName>Business_Sub_Sector__c</fullName>
    <label>Business Sub-Sector</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Business_Sector__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>111 - Crop production</fullName>
            </value>
            <value>
                <fullName>112 - Animal production and aquaculture</fullName>
            </value>
            <value>
                <fullName>113 - Forestry and logging</fullName>
            </value>
            <value>
                <fullName>114 - Fishing, hunting and trapping</fullName>
            </value>
            <value>
                <fullName>115 - Support activities for agriculture and forestry</fullName>
            </value>
            <value>
                <fullName>211 - Oil and gas extraction</fullName>
            </value>
            <value>
                <fullName>212 - Mining and quarrying (except oil and gas)</fullName>
            </value>
            <value>
                <fullName>213 - Support activities for mining, and oil and gas extraction</fullName>
            </value>
            <value>
                <fullName>2211 - Electric power generation, transmission and distribution</fullName>
            </value>
            <value>
                <fullName>2212 - Natural gas distribution</fullName>
            </value>
            <value>
                <fullName>2213 - Water, sewage and other systems</fullName>
            </value>
            <value>
                <fullName>236 - Construction of buildings</fullName>
            </value>
            <value>
                <fullName>237 - Heavy and civil engineering construction</fullName>
            </value>
            <value>
                <fullName>238 - Specialty trade contractors</fullName>
            </value>
            <value>
                <fullName>311 - Food manufacturing</fullName>
            </value>
            <value>
                <fullName>312 - Beverage and tobacco product manufacturing</fullName>
            </value>
            <value>
                <fullName>313 - Textile mills</fullName>
            </value>
            <value>
                <fullName>314 - Textile product mills</fullName>
            </value>
            <value>
                <fullName>315 - Clothing manufacturing</fullName>
            </value>
            <value>
                <fullName>316 - Leather and allied product manufacturing</fullName>
            </value>
            <value>
                <fullName>321 - Wood product manufacturing</fullName>
            </value>
            <value>
                <fullName>322 - Paper manufacturing</fullName>
            </value>
            <value>
                <fullName>323 - Printing and related support activities</fullName>
            </value>
            <value>
                <fullName>324 - Petroleum and coal product manufacturing</fullName>
            </value>
            <value>
                <fullName>325 - Chemical manufacturing</fullName>
            </value>
            <value>
                <fullName>326 - Plastics and rubber products manufacturing</fullName>
            </value>
            <value>
                <fullName>327 - Non-metallic mineral product manufacturing</fullName>
            </value>
            <value>
                <fullName>331 - Primary metal manufacturing</fullName>
            </value>
            <value>
                <fullName>332 - Fabricated metal product manufacturing</fullName>
            </value>
            <value>
                <fullName>333 - Machinery manufacturing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>