force-app/main/default/objects/Consultation__c/fields/CFirstName__c.field-meta.xml
<CustomField>
    <fullName>CFirstName__c</fullName>
    <formula>Contact_Consultation__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Name</label>
    <type>Text</type>
</CustomField>