force-app/main/default/objects/Consultation__c/fields/CLastName__c.field-meta.xml
<CustomField>
    <fullName>CLastName__c</fullName>
    <formula>Contact_Consultation__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Name</label>
    <type>Text</type>
</CustomField>