force-app/main/default/objects/Consultation__c/fields/CMailingAddress__c.field-meta.xml
<CustomField>
    <fullName>CMailingAddress__c</fullName>
    <formula>if(LEN(Contact_Consultation__r.MailingStreet)&gt;0, Contact_Consultation__r.MailingStreet&amp; &quot; &quot; , &quot;&quot; ) &amp; BR() &amp;
if(LEN(Contact_Consultation__r.MailingCity)&gt;0, Contact_Consultation__r.MailingCity&amp; &quot;, &quot; , &quot;&quot; )&amp;
if(LEN(Contact_Consultation__r.MailingState )&gt;0, Contact_Consultation__r.MailingState &amp; &quot; &quot; , &quot;&quot; )&amp;
If(LEN( Contact_Consultation__r.MailingPostalCode) &gt;0, Contact_Consultation__r.MailingPostalCode,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mailing Address</label>
    <type>Text</type>
</CustomField>