force-app/main/default/objects/Consultation__c/fields/Confidence_Rating__c.field-meta.xml
<CustomField>
    <fullName>Confidence_Rating__c</fullName>
    <label>Confidence Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Confident</fullName>
            </value>
            <value>
                <fullName>Probable</fullName>
            </value>
            <value>
                <fullName>Not Likely</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>