force-app/main/default/objects/Consultation__c/fields/Consultation_Type__c.field-meta.xml
<CustomField>
    <fullName>Consultation_Type__c</fullName>
    <label>Consultation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business Idea Consultation</fullName>
            </value>
            <value>
                <fullName>Business Plan Consultation</fullName>
            </value>
            <value>
                <fullName>GrowthWheel / Business Expansion Consultation</fullName>
            </value>
            <value>
                <fullName>Starter Company Consultation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>