force-app/main/default/objects/Consultation__c/fields/Contact_Consultation__c.field-meta.xml
<CustomField>
    <fullName>Contact_Consultation__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Consultations</relationshipLabel>
    <relationshipName>Consultations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>