force-app/main/default/objects/Consultation__c/fields/ConvertedPersonToBusiness__c.field-meta.xml
<CustomField>
    <fullName>ConvertedPersonToBusiness__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ConvertedPersonToBusiness</label>
    <type>Checkbox</type>
</CustomField>