force-app/main/default/objects/Consultation__c/fields/CPhone__c.field-meta.xml
<CustomField>
    <fullName>CPhone__c</fullName>
    <formula>Contact_Consultation__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone</label>
    <type>Text</type>
</CustomField>