force-app/main/default/objects/Consultation__c/fields/Describe_your_Challenge__c.field-meta.xml
<CustomField>
    <fullName>Describe_your_Challenge__c</fullName>
    <inlineHelpText>If Yes, please describe your challenge and we will contact you.</inlineHelpText>
    <label>Describe your Challenge</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>