force-app/main/default/objects/Consultation__c/fields/DeskCaseID__c.field-meta.xml
<CustomField>
    <fullName>DeskCaseID__c</fullName>
    <label>DeskCaseID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>