force-app/main/default/objects/Consultation__c/fields/Do_You_Plan_To_Start_Your_Business_SS1__c.field-meta.xml
<CustomField>
    <fullName>Do_You_Plan_To_Start_Your_Business_SS1__c</fullName>
    <inlineHelpText>Sub-Section 1 - Not Started:  Do you plan to start your business?</inlineHelpText>
    <label>Do You Plan To Start Your Business?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>