force-app/main/default/objects/Consultation__c/fields/ET_Consultant__c.field-meta.xml
<CustomField>
    <fullName>ET_Consultant__c</fullName>
    <description>Identifies the Enterprise Toronto staff member that provided the consultation.</description>
    <inlineHelpText>Identifies the Enterprise Toronto staff member that provided the consultation.</inlineHelpText>
    <label>ET Consultant</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Angie Bellanza</fullName>
            </value>
            <value>
                <fullName>Chris Rickett</fullName>
            </value>
            <value>
                <fullName>Gracie Worrall</fullName>
            </value>
            <value>
                <fullName>Jason Li</fullName>
            </value>
            <value>
                <fullName>Karen Keskull</fullName>
            </value>
            <value>
                <fullName>Margie Galarneau</fullName>
            </value>
            <value>
                <fullName>Ronit Goldenberg</fullName>
            </value>
            <value>
                <fullName>Sandi Koitsis</fullName>
            </value>
            <value>
                <fullName>Vikas Jain</fullName>
            </value>
            <value>
                <fullName>Online Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>