force-app/main/default/objects/Consultation__c/fields/ET_Follow_Up_Survey_Completed__c.field-meta.xml
<CustomField>
    <fullName>ET_Follow_Up_Survey_Completed__c</fullName>
    <description>Indicates of ET Follow-Up Survey has been completed.</description>
    <label>ET Follow-Up Survey Completed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>