force-app/main/default/objects/Consultation__c/fields/ET_to_contact_to_Discuss_Assistance_SS1__c.field-meta.xml
<CustomField>
    <fullName>ET_to_contact_to_Discuss_Assistance_SS1__c</fullName>
    <inlineHelpText>Sub-Section 1 - Not Started:  Would you like an Enterprise Toronto business consultant to contact you to discuss assistance available to your business?</inlineHelpText>
    <label>ET to contact to Discuss Assistance?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>