force-app/main/default/objects/Consultation__c/fields/Financial_Overview__c.field-meta.xml
<CustomField>
    <fullName>Financial_Overview__c</fullName>
    <label>Financial Overview</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>