force-app/main/default/objects/Consultation__c/fields/Followup_Completed_within_30_days__c.field-meta.xml
<CustomField>
    <fullName>Followup_Completed_within_30_days__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Followup Completed within 30 days</label>
    <type>Checkbox</type>
</CustomField>