force-app/main/default/objects/Consultation__c/fields/Have_you_Hired_Additional_Staff_SS2__c.field-meta.xml
<CustomField>
    <fullName>Have_you_Hired_Additional_Staff_SS2__c</fullName>
    <inlineHelpText>Sub-Section 2 - New Business: Have you hired any additional staff since you engaged Enterprise Toronto?</inlineHelpText>
    <label>Have you Hired Additional Staff?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>