force-app/main/default/objects/Consultation__c/fields/Hire_New_Staff_in_Next_6_Months_SS3__c.field-meta.xml
<CustomField>
    <fullName>Hire_New_Staff_in_Next_6_Months_SS3__c</fullName>
    <inlineHelpText>Sub-Section 3 - Existing Business:  Do you plan to hire any new staff within the next 6 months?</inlineHelpText>
    <label>Plan to Hire New Staff in Next 6 Months?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>