force-app/main/default/objects/Consultation__c/fields/Hired_Staff_since_engaged_ET_SS3__c.field-meta.xml
<CustomField>
    <fullName>Hired_Staff_since_engaged_ET_SS3__c</fullName>
    <inlineHelpText>Sub-Section 3 - Existing Business:  Have you hired any additional staff since you engaged Enterprise Toronto?</inlineHelpText>
    <label>Hired Additional Staff since engaged ET?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>