force-app/main/default/objects/Consultation__c/fields/How_did_ET_help__c.field-meta.xml
<CustomField>
    <fullName>How_did_ET_help__c</fullName>
    <description>Follow up if they ask for ET to do a story.</description>
    <label>How did ET help?</label>
    <type>TextArea</type>
</CustomField>