force-app/main/default/objects/Consultation__c/fields/How_did_ET_help_Existing__c.field-meta.xml
<CustomField>
    <fullName>How_did_ET_help_Existing__c</fullName>
    <label>How did ET Help?</label>
    <type>TextArea</type>
</CustomField>