force-app/main/default/objects/Consultation__c/fields/How_did_you_hear_about_ET__c.field-meta.xml
<CustomField>
    <fullName>How_did_you_hear_about_ET__c</fullName>
    <label>How did you hear about ET?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Newspaper</fullName>
            </value>
            <value>
                <fullName>Internet Search</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>ET E-Newsletter</fullName>
            </value>
            <value>
                <fullName>Another Organization</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>