force-app/main/default/objects/Consultation__c/fields/How_Many_Additional_Staff_SS2__c.field-meta.xml
<CustomField>
    <fullName>How_Many_Additional_Staff_SS2__c</fullName>
    <inlineHelpText>Sub-Section 2 - New Business: If yes, how many additional staff have you hired?</inlineHelpText>
    <label>If Yes, How Many Additional Staff?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>