force-app/main/default/objects/Consultation__c/fields/How_Many_People_Work_in_Business_SS2__c.field-meta.xml
<CustomField>
    <fullName>How_Many_People_Work_in_Business_SS2__c</fullName>
    <inlineHelpText>Sub-Section 2 - New Business:  Including yourself, how many people work in your business?</inlineHelpText>
    <label>How Many People Work in your Business?</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>