force-app/main/default/objects/Consultation__c/fields/If_Yes_How_Many_Additional_2__c.field-meta.xml
<CustomField>
    <fullName>If_Yes_How_Many_Additional_2__c</fullName>
    <label>If Yes, How Many Additional Staff?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>