force-app/main/default/objects/Consultation__c/fields/Import_or_Export__c.field-meta.xml
<CustomField>
    <fullName>Import_or_Export__c</fullName>
    <description>Request whether a client imports or exports products.</description>
    <label>Import or Export</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Import</fullName>
            </value>
            <value>
                <fullName>Export</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>