force-app/main/default/objects/Consultation__c/fields/Increased_Financing_Since_Engaged_ET_SS3__c.field-meta.xml
<CustomField>
    <fullName>Increased_Financing_Since_Engaged_ET_SS3__c</fullName>
    <inlineHelpText>Sub-Section 3 - Existing Business:  Have you accessed additional financing since you engaged Enterprise Toronto?</inlineHelpText>
    <label>Increased Financing Since Engaged ET?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>