force-app/main/default/objects/Consultation__c/fields/Issues_To_Discuss__c.field-meta.xml
<CustomField>
    <fullName>Issues_To_Discuss__c</fullName>
    <label>Issues To Discuss</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>