force-app/main/default/objects/Consultation__c/fields/MailingList__c.field-meta.xml
<CustomField>
    <fullName>MailingList__c</fullName>
    <description>Would you like to be added to the Enterprise Toronto mailing list?</description>
    <inlineHelpText>Would you like to be added to the Enterprise Toronto mailing list?</inlineHelpText>
    <label>Added to EnterpriseTO Mailing List?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>