force-app/main/default/objects/Consultation__c/fields/Moved_to_a_Larger_Location_SS3__c.field-meta.xml
<CustomField>
    <fullName>Moved_to_a_Larger_Location_SS3__c</fullName>
    <inlineHelpText>Sub-Section 3 - Existing Business:  Have you moved to a larger location since you engaged Enterprise Toronto?</inlineHelpText>
    <label>Moved to a Larger Location?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>